--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -68,7 +68,7 @@ build:
   #    memory: 4Gi
 
 ### Application/Deployment-specific values (For configuring Deployment, Service, Route, ConfigMap, etc)
-#deploy:
+deploy:
 #  ## Number of pod replicas to deploy
 #  replicas: 1
 #
@@ -125,7 +125,7 @@ build:
   env:
 #  #  - name: VAR_NAME
 #  #    value: var-value
-    - name: NAME
+    - name: ORG_ACME_GREETINGRESOURCE_NAME
       value: Demo
 #
 #  ## Freeform envFrom for the Quarkus app. More information: https://kubernetes.io/docs/tasks/configure-pod-container/configure-pod-configmap/#configure-all-key-value-pairs-in-a-configmap-as-container-environment-variables
